# LeetCode

./: $19_RemoveNthNodeFromEndofList.java  $203_Remove Linked List Elements.java  $21_MergeTwoLists.java  $234_PalindromeLinkedList.java  $24_SwapNodesInPairs.java  $2_Add Two Numbers.java  $61_RotateList.java  $876_MiddleOfTheLinkedList.java  .gitignore  README.md
cpp/: CMakeLists.txt
cpp/Array/: $1013_PartitionArrayIntoThreePartsWithEqualSum.cpp  $1018_BinaryPrefixDivisibleBy5.cpp  $1122_RelativeSortArray.cpp  $1184_DistanceBetweenBusStops.cpp  $167_TwoSumII-Inputarrayissorted.cpp  $209_MinimumSizeSubarraySum.cpp  $217_ContainsDuplicate.cpp  $219_ContainsDuplicateII.cpp  $225_ImplementStackusingQueues.cpp  $3_LongestSubstringWithoutRepeatingCharacters.cpp  $448_FindAllNumbersDisappearedinanArray.cpp  $485_MaxConsecutiveOnes.cpp  $53_MaximumSubarray.cpp  $54_SpiralMatrix.cpp  $55_JumpGame.cpp  $566_ReshapetheMatrix.cpp  $56_MergeIntervals.cpp  $583_DeleteOperationforTwoStrings.cpp  $605_CanPlaceFlowers.cpp  $62_UniquePaths.cpp  $643_MaximumAverageSubarrayI.cpp  $661_ImageSmoother.cpp  $717_1-bitand2-bitCharacters.cpp  $718_MaximumLengthofRepeatedSubarray.cpp  $724_FindPivotIndex.cpp  $747_LargestNumberAtLeastTwiceofOthers.cpp  $74_Searcha2DMatrix.cpp  $75_SortColors.cpp  $766_ToeplitzMatrix.cpp  $78_Subsets.cpp  $80_RemoveDuplicatesfromSortedArrayII.cpp  $832_FlippinganImage.cpp  $88_MergeSortedArray.cpp  $896_MonotonicArray.cpp  $914_XofaKindinaDeckofCards.cpp  $922_SortArrayByParityII.cpp  $962_MaximumWidthRamp.cpp  $977_SquaresofaSortedArray.cpp  1002.FindCommonCharacters.cpp  1010.PairsofSongsWithTotalDurationsDivisibleby60.cpp  (+55 more)
cpp/BFS/: $1368_MinimumCosttoMakeatLeastOneValidPathinaGrid.cpp
cpp/Backtracking/: $$1219_PathwithMaximumGold.cpp  $$1219_PathwithMaximumGold_cpp  $37_SudokuSolver  $46_Permutations.cpp  $47_PermutationsII  $47_PermutationsII.cpp  $52_N-QueensII.cpp  $77_Combinations.cpp  37_SudokuSolver.cpp  51_N-Queens.cpp
cpp/BinarySearch/: $374_GuessNumberHigherorLower.cpp  $658_FindKClosestElements.cpp  $704_BinarySearch.cpp  1351_CountNegativeNumbersinaSortedMatrix.cpp  162FindPeakElement.cpp  374_GuessNumberHigherorLower.cpp  704_BinarySearch.cpp
cpp/BitManuputation/: $1342_NumberofStepstoReduceaNumbertoZero.cpp  $136_SingleNumber.cpp  $260_SingleNumberIII.cpp  1342_NumberofStepstoReduceaNumbertoZero.cpp  136_SingleNumber.cpp  191_Numberof1Bits.cpp  260_SingleNumberIII.cpp  342_PowerofFour.cpp
cpp/Calendar/: $1360_NumberofDaysBetweenTwoDates.cpp  1344_AngleBetweenHandsofaClock.cpp  1360_NumberofDaysBetweenTwoDates.cpp
cpp/DFS/: $1377_FrogPositionAfterTSeconds.cpp  1377_FrogPositionAfterTSeconds.cpp  5354_TimeNeededtoInformAllEmployees.cpp
cpp/Design/: $1352_ProductoftheLastKNumbers.cpp  1352_ProductoftheLastKNumbers.cpp  1357_ApplyDiscountEverynOrders.cpp
cpp/DivideandConquer/: $23_MergekSortedLists.cpp
cpp/DynamicPrograming/: $221_MaximalSquare.cpp  $70_ClimbingStairs.cpp  1277_CountSquareSubmatriceswithAllOnes.cpp  221_MaximalSquare.cpp  70_ClimbingStairs.cpp
cpp/Graph/: $1361_ValidateBinaryTreeNodes.cpp  1361_ValidateBinaryTreeNodes.cpp
cpp/Greedy/: $1353_MaximumNumberofEventsThatCanBeAttended.cpp  $5359_MaximumPerformanceofaTeam.cpp  1353_MaximumNumberofEventsThatCanBeAttended.cpp  45_JumpGameII.cpp  5359_MaximumPerformanceofaTeam.cpp
cpp/HashSet&HashMap/: $1338_ReduceArraySizetoTheHalf.cpp  $1346_CheckIfNandItsDoubleExist.cpp  $36_ValidSudoku.cpp
cpp/HashTable/: 1338_ReduceArraySizetoTheHalf.cpp  1346_CheckIfNandItsDoubleExist.cpp  36_ValidSudoku.cpp  5336_IncreasingDecreasingString.cpp
cpp/Heap/: 264_UglyNumberII.cpp
cpp/Math/: $1025_DivisorGame.cpp  $1103_DistributeCandiestoPeople.cpp  $1217_PlaywithChips.cpp  $1281_SubtracttheProductandSumofDigitsofanInteger.cpp  $1323_Maximum69Number.cpp  $1363_LargestMultipleofThree.cpp  $168_ExcelSheetColumnTitle.cpp  $172_FactorialTrailingZeroes.cpp  $263_UglyNumber.cpp  $357_CountNumberswithUniqueDigits.cpp  $413_ArithmeticSlices.cpp  $453_MinimumMovestoEqualArrayElements.cpp  $50_Pow(x,n).cpp  $5353_BulbSwitcherIII.cpp  $598_RangeAdditionII.cpp  $633_SumofSquareNumbers.cpp  $645_SetMismatch.cpp  $7_ReverseInteger.cpp  $812_LargestTriangleArea.cpp  $836_RectangleOverlap.cpp  $883_ProjectionAreaof3DShapes.cpp  $942_DIStringMatch.cpp  $9_PalindromeNumber.cpp  1009_ComplementofBase10Integer.cpp  1037_ValidBoomerang.cpp  1103_DistributeCandiestoPeople.cpp  1217_PlaywithChips.cpp  1317_ConvertIntegertotheSumofTwoNo-ZeroIntegers.cpp  1323_Maximum69Number.cpp  1362_ClosestDivisors.cpp  1363_LargestMultipleofThree.cpp  168_ExcelSheetColumnTitle.cpp  171_ExcelSheetColumnNumber.cpp  204_CountPrimes.cpp  223_RectangleArea.cpp  357_CountNumberswithUniqueDigits.cpp  367_ValidPerfectSquare.cpp  413_ArithmeticSlices.cpp  453_MinimumMovestoEqualArrayElements.cpp  5353_BulbSwitcherIII.cpp  (+16 more)
cpp/SlidingWindow/: $1343_NumberofSub-arraysofSizeKandAverageGreaterthanorEqualtoThreshold.cpp  $1358_NumberofSubstringsContainingAllThreeCharacters.cpp  1343_NumberofSub-arraysofSizeKandAverageGreaterthanorEqualtoThreshold.cpp  1358_NumberofSubstringsContainingAllThreeCharacters.cpp  2009_MinimumNumberOfOperationsToMakeArrayContinuous.cpp
cpp/Sort/: $1329_SorttheMatrixDiagonally.cpp  $242_ValidAnagram.cpp  $5345_RankTeamsbyVotes.cpp  1356_SortIntegersbyTheNumberof1Bits.cpp  242_ValidAnagram.cpp  5345_RankTeamsbyVotes.cpp
cpp/String/: $1071_Greatest Common Divisor of Strings.cpp  $1221_Split a String in Balanced Strings.cpp  $125_Valid Palindrome.cpp  $1371_FindtheLongestSubstringContainingVowelsinEvenCounts.cpp  $14_Longest Common Prefix.C++  $17_Letter Combinations of a Phone Number.cpp  $28_Implement strStr().cpp  $344_Reverse String.cpp  $345_Reverse Vowels of a String.cpp  $434_Number of Segments in a String.C++  $459_Repeated Substring Pattern.cpp  $49_Group Anagrams.cpp  $520_Detect Capital.cpp  $522_Longest Uncommon Subsequence II.C++  $539_Minimum Time Difference.cpp  $541_Reverse String II.C++  $556_Next Greater Element III.cpp  $647_Palindromic Substrings.C++  $67_Add Binary.cpp  $709_To Lower Case.cpp  (+79 more)
(+1254 files in other folders)
